[NO-JIRA] Spacing fixes

--- a/src/containers/common/Login/login.scss
+++ b/src/containers/common/Login/login.scss
@@ -1,7 +1,11 @@
 @import '~utils/tokens';
 
 .login {
-  &__sign-up-link {
+  &__link {
+    margin-top: $spacing-base;
+  }
+
+  &__form {
     margin-top: $spacing-base;
   }
 }
